log
Wed, May 14, 2025  9:46:07 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025 10:11:51 AM: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f187bf5
Wed, May 14, 2025 10:26:46 AM: 
 sudoku.c | 60 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 59 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8ffd8a1
Wed, May 14, 2025 10:27:01 AM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:92:15: error: 'columna' undeclared (first use in this function)
       int j = columna + (p % 3);
               ^~~~~~~
sudoku.c:92:15: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:87:9: error: unused variable 'ColumnaC' [-Werror=unused-variable]
     int ColumnaC = 3 * (k % 3);
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
f02ec8a
Wed, May 14, 2025 10:27:16 AM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:92:15: error: 'columna' undeclared (first use in this function)
       int j = columna + (p % 3);
               ^~~~~~~
sudoku.c:92:15: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:87:9: error: unused variable 'ColumnaC' [-Werror=unused-variable]
     int ColumnaC = 3 * (k % 3);
         ^~~~~~~~
cc1.exe: all warnings being treated as errors
ceb3f3a
Wed, May 14, 2025 10:27:26 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b197d2c
